<resources>
    <string name="app_name">Dialogs Lab</string>

    <string name="dialog_fire_missiles">Fire Missiles!!</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>

    <!-- buttons -->
    <string name="text_file_missiles">LAUNCH FIRE MISSILES</string>

    <string name="pick_color">Pick a Color</string>
    <array name="colors_array">
        <item name="red">Red</item>
        <item name="green">Green</item>
        <item name="blue">Blue</item>
    </array>
    <string name="launch_colors">Launch Colors</string>

    <string name="pick_toppings">Pick Toppings</string>
    <array name="toppings_array">
        <item name="pepperoni">Pepperoni</item>
        <item name="mushrooms">Mushrooms</item>
        <item name="peppers">Peppers</item>
    </array>
    <string name="ok">OK</string>

    <string name="launch_multi_dialog">Launch Multiple Dialog</string>

    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="signin">Sign In</string>
    <string name="launch_custom_dialog">Launch Custom Dialog</string>

    <string name="Launch_Notif">Launch Notification</string>
    <string name="Notif_Title">Hey girl</string>
    <string name="notif_content">Got ya to open your phone for no reason :))</string>

    <string name="Channel_Name">Notif Test</string>
    <string name="Channel_description">Trying to do a notif!</string>
</resources>
